--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Google Sheets
+api-app-ruslan-02587d1f2055.json
